--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "debounce": "^1.2.0",
     "firebase": "^6.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
